Fixed hero section mobile lead

--- a/src/assets/shared/scss/_hero.scss
+++ b/src/assets/shared/scss/_hero.scss
@@ -46,6 +46,45 @@
   }
 }
 
+@keyframes type-width-mobile {
+  0% {
+    opacity: 1;
+    width: 0;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    opacity: 1;
+    width: 54px;
+  }
+}
+
+@keyframes type-width-two-mobile {
+  0% {
+    opacity: 1;
+    width: 54px;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    opacity: 1;
+    width: 54px;
+  }
+}
+
+@keyframes type-width-three-mobile {
+  0% {
+    opacity: 1;
+    width: 54px;
+  }
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
+}
+
 .nav-menu {
   animation: fade-in 0.2s ease-in 16s forwards;
 }
@@ -127,18 +166,18 @@
         padding-top: 5vh;
         padding-left: 3vw;
         h1 {
-          font-size: 3vh;
+          font-size: 20px;
           span {
-            font-size: 2.1vh;
+            font-size: 12px;
           }
           &:nth-child(1) {
-            animation: type-width 4s ease-in-out 1s;
+            animation: type-width-mobile 4s ease-in-out 1s;
           }
           &:nth-child(2) {
-            animation: type-width-two 4s ease-in-out 5s;
+            animation: type-width-two-mobile 4s ease-in-out 5s;
           }
           &:nth-child(3) {
-            animation: type-width-three 2s ease-in-out 9s forwards;
+            animation: type-width-three-mobile 2s ease-in-out 9s forwards;
           }
         }
       }
